--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
   "uuid": "35a16c4f-a13a-4339-a4ad-11f2dc92d866",
-  "shortName": "Everything OK",
-  "longName": "Everything OK",
+  "shortName": "Magic Button",
+  "longName": "Magic Button",
   "companyName": "MakeAwesomeHappen",
   "versionCode": 1,
   "versionLabel": "1.0",
